iptables
CREATE FILE IN /etc/iptables.sh

/etc/iptables.sh - changing:

export PT=iptables

$PT -P INPUT DROP
$PT -P FORWARD DROP
$PT -P OUTPUT ACCEPT

$PT -F
$PT -X
$PT -t mangle -F
$PT -t mangle -X

*****(I don’t know about cleaning NAT table, I’am thinking about it)*****

$PT-A INPUT -p all -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
$PT-A FORWARD -p all -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
$PT-A OUTPUT -p all -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

$PT -t mangle -A PREROUTING -m state --state INVALID -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j DROP
$PT -t mangle -A PREROUTING -p tcp ! --syn -m state --state NEW -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags ALL FIN,URG,PSH -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags ALL ALL -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags ALL SYN,RST,ACK,FIN,URG -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags ALL NONE -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
$PT -t mangle -A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP

$PT -N ports
$PT -A ports -p tcp -i enp0s3 --dport 2222 -j ACCEPT
$PT -A ports -p tcp -i enp0s3 --dport 80 -j ACCEPT
$PT -A ports -p tcp -i enp0s3 --dport 443 -j ACCEPT
$PT -A ports -i enp0s3 -p tcp —dport 25 -j ACCEPT
$PT -A INPUT -i lo -j ACCEPT

$PT -N scan
$PT -A scan -p tcp --dport 2222 -limit --limit 10/s --limit-burst 2 -j RETURN
$PT -A scan -j DROP

$PT -A INPUT -p tcp --dport 2222 -m conntrack --ctstate NEW -m recent --set
$PT -A INPUT -p tcp --dport 2222 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 10 -j DROP

$PT -A INPUT -j ports
$PT -A INPUT -j scan
$PT -A INPUT -p tcp -m tcp —tcp-flags SYN,ACK,FIN,RST RST -m limit —limit 1/s -j ACCEPT

$PT -A INPUT -s ! 192.168.20.0/255.255.252.0 -p icmp --icmp-type echo-request -j DROP

/sbin/iptables-save > /etc/iptables_rules

In the /etc/network/interfaces add 1 line:

pre-up iptables-restore < /etc/iptables_rules

AND THEN WE NEED TO REBOOT A MACHINE

sudo fail2ban restart












# Generated by xtables-save v1.8.2 on Sun Sep  1 06:05:52 2019
*filter
:INPUT DROP [27084:1945134]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [15132:2026705]
:ports - [0:0]
:scan - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j ports
-A INPUT -j scan
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -m conntrack --ctstate NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 2222 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 10 --name DEFAULT --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ports -i enp0s3 -p tcp -m tcp --dport 2222 -j ACCEPT
-A ports -i enp0s3 -p tcp -m tcp --dport 80 -j ACCEPT
-A ports -i enp0s3 -p tcp -m tcp --dport 443 -j ACCEPT
-A ports -i enp0s3 -p tcp -m tcp --dport 25 -j ACCEPT
-A ports -i lo -j ACCEPT
-A scan -p tcp -m tcp --dport 2222 -m limit --limit 10/sec --limit-burst 2 -j RETURN
-A scan -j DROP
COMMIT
# Completed on Sun Sep  1 06:05:52 2019
# Generated by xtables-save v1.8.2 on Sun Sep  1 06:05:52 2019
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m state --state INVALID -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j DROP
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
COMMIT
# Completed on Sun Sep  1 06:05:52 2019
